[package]
name = "Rocker_DB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = "2.2.0"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
glob = "0.3.1"
global = "0.4.3"
regex = "1.10.3"
rocksdb = "0.21.0"
serde = "1.0.196"
walkdir = "2.4.0"

